--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_starter_kit
+name: flutter_starterkit
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -19,10 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  dio: ^2.0.16
+  flutter_staggered_grid_view: ^0.3.0
+  pull_to_refresh: ^1.4.4
+  shared_preferences: ^0.5.3+1
 
 dev_dependencies:
   flutter_test:
